Bug 252829 - Block "ForTesting" media IPC endpoints when not testing
Summary: Block "ForTesting" media IPC endpoints when not testing
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WebKit Process Model (show other bugs)
Version: Other
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Gavin
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2023-02-23 08:06 PST by Gavin
Modified: 2023-02-28 04:46 PST (History)
1 user (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Gavin 2023-02-23 08:06:07 PST
Block "ForTesting" media IPC endpoints when not testing. This includes:

    SetMediaOverridesForTesting()
    TriggerBeginInterruptionForTesting()
    TriggerEndInterruptionForTesting()
Comment 1 Radar WebKit Bug Importer 2023-02-23 09:22:26 PST
<rdar://problem/105837347>
Comment 2 Gavin 2023-02-23 09:25:40 PST
Pull request: https://github.com/WebKit/WebKit/pull/10595
Comment 3 EWS 2023-02-28 04:46:06 PST
Committed 260935@main (106f26304309): <https://commits.webkit.org/260935@main>

Reviewed commits have been landed. Closing PR #10595 and removing active labels.