Introduce AllowTestOnlyIPC in order to block "ForTesting" IPC endpoints https://bugs.webkit.org/show_bug.cgi?id=252829 rdar://105837347

Reviewed by Alex Christensen.

Starts to block unneeded "ForTesting" IPC endpoints by adding a default
deny to those messages and then allowing them only when a preference is
specified. The new preference exposed is AllowTestOnlyIPC.

* LayoutTests/TestExpectations:
* LayoutTests/fast/mediastream/keep-microphone-muted-on-uninterruption.html:
* LayoutTests/fast/mediastream/video-created-while-interrupted.html:
* LayoutTests/ipc/no-test-only-ipc-expected-crash.html: Added.
* LayoutTests/ipc/test-only-ipc-allowed-expected.txt: Added.
* LayoutTests/ipc/test-only-ipc-allowed.html: Added.
* LayoutTests/media/audioSession/audioSessionState.html:
* LayoutTests/media/audioSession/ios/audioSessionState-getUserMedia.html:
* LayoutTests/platform/ios/mediastream/getUserMedia-override-audio-session-interruption.html:
* Source/WTF/Scripts/Preferences/UnifiedWebPreferences.yaml:
* Source/WebKit/CMakeLists.txt:
* Source/WebKit/DerivedSources-input.xcfilelist:
* Source/WebKit/DerivedSources.make:
* Source/WebKit/GPUProcess/GPUConnectionToWebProcess.cpp:
(WebKit::GPUConnectionToWebProcess::setMediaOverridesForTesting):
* Source/WebKit/GPUProcess/GPUConnectionToWebProcess.h:
(WebKit::GPUConnectionToWebProcess::allowTestOnlyIPC const):
* Source/WebKit/GPUProcess/media/RemoteAudioSessionProxy.cpp:
(WebKit::RemoteAudioSessionProxy::triggerBeginInterruptionForTesting):
(WebKit::RemoteAudioSessionProxy::triggerEndInterruptionForTesting):
* Source/WebKit/Shared/GPUProcessConnectionParameters.h:
(WebKit::GPUProcessConnectionParameters::encode const): Deleted.
(WebKit::GPUProcessConnectionParameters::decode): Deleted.
* Source/WebKit/Shared/GPUProcessConnectionParameters.serialization.in: Added.
* Source/WebKit/UIProcess/API/Cocoa/WKWebView.mm:
(-[WKWebView _setupPageConfiguration:]):
* Source/WebKit/UIProcess/API/Cocoa/WKWebViewConfiguration.mm:
(-[WKWebViewConfiguration init]):
(-[WKWebViewConfiguration copyWithZone:]):
(-[WKWebViewConfiguration _allowTestOnlyIPC]):
(-[WKWebViewConfiguration _setAllowTestOnlyIPC:]):
* Source/WebKit/UIProcess/API/Cocoa/WKWebViewConfigurationPrivate.h:
* Source/WebKit/UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::launchProcess):
* Source/WebKit/UIProcess/WebProcessPool.cpp:
(WebKit::WebProcessPool::createGPUProcessConnection):
(WebKit::WebProcessPool::createWebPage):
* Source/WebKit/UIProcess/WebProcessProxy.h:
(WebKit::WebProcessProxy::allowTestOnlyIPC const):
(WebKit::WebProcessProxy::setAllowTestOnlyIPC):
* Source/WebKit/WebKit.xcodeproj/project.pbxproj:
* Tools/WebKitTestRunner/TestOptions.cpp:
(WTR::TestOptions::defaults):
(WTR::TestOptions::keyTypeMapping):
* Tools/WebKitTestRunner/TestOptions.h:
(WTR::TestOptions::allowTestOnlyIPC const):
* Tools/WebKitTestRunner/cocoa/TestControllerCocoa.mm:
(WTR::TestController::platformCreateWebView):

Canonical link: https://commits.webkit.org/260935@main